# SweatCI

./: .gitignore  CMakeLists.txt  HayBCMD.cpp  HayBCMD.h  HayBCMD.sln  HayBCMD.vcxproj  HayBCMD.vcxproj.filters  LICENSE.txt  README.md  SweatCI.cpp  SweatCI.h  something.txt  todo.md
example/: CMakeLists.txt  example.cpp
example/cfg/: alias.cfg  comments.cfg  info.cfg  quotes.cfg  semicolon.cfg
example/src/: CVariableUtils.cpp  CVariableUtils.h  example.cpp
